samples/_failures_safe/1761177253_881ac2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f9d68bde.c: In function ‘main’:
./samples/SAFE/__tmp_f9d68bde.c:128:5: error: expected declaration or statement at end of input
  128 |     char input[256];
      |     ^~~~
